--- a/definitions/stitch.yml
+++ b/definitions/stitch.yml
@@ -6,14 +6,13 @@ info:
   title: Nexmo Stitch API
   description: 'The Nexmo Stitch API enables you to build conversation features where communication can take place across multiple mediums including IP Messaging, PSTN Voice, SMS and WebRTC Audio and Video. The context of the conversations is maintained though each communication event taking place within a conversation, no matter the medium.'
   contact:
-    name: Nexmo Support
+    name: Nexmo DevRel
+    email: devrel@nexmo.com
     url: 'https://developer.nexmo.com/'
-    email: ea-support@nexmo.com
   x-label: Developer Preview
 paths:
   /conversations:
     post:
-      x-swagger-router-controller: createConversation
       operationId: createConversation
       tags:
         - conversation
@@ -24,7 +23,6 @@ paths:
       requestBody:
         $ref: '#/components/requestBodies/Conversation'
     get:
-      x-swagger-router-controller: listConversations
       operationId: listConversations
       tags:
         - conversation
@@ -84,7 +82,6 @@ paths:
     parameters:
       - $ref: '#/components/parameters/conversation_id'
     put:
-      x-swagger-router-controller: conversations
       operationId: replaceConversation
       tags:
         - conversation
@@ -95,7 +92,6 @@ paths:
       requestBody:
         $ref: '#/components/requestBodies/Conversation'
     get:
-      x-swagger-router-controller: retrieveConversation
       operationId: retrieveConversation
       tags:
         - conversation
@@ -149,7 +145,6 @@ paths:
                 required:
                   - uuid
     delete:
-      x-swagger-router-controller: deleteConversation
       operationId: deleteConversation
       tags:
         - conversation
@@ -161,7 +156,6 @@ paths:
     parameters:
       - $ref: '#/components/parameters/conversation_id'
     post:
-      x-swagger-router-controller: createEvent
       operationId: createEvent
       tags:
         - event
@@ -200,7 +194,6 @@ paths:
                   href:
                     $ref: '#/components/schemas/href_event'
     get:
-      x-swagger-router-controller: getEvents
       operationId: getEvents
       tags:
         - event
@@ -219,7 +212,6 @@ paths:
       - $ref: '#/components/parameters/conversation_id'
       - $ref: '#/components/parameters/event_id'
     get:
-      x-swagger-router-controller: getEvent
       operationId: getEvent
       tags:
         - event
@@ -232,7 +224,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/event_retrieved'
     delete:
-      x-swagger-router-controller: deleteEvent
       operationId: deleteEvent
       tags:
         - event
@@ -244,7 +235,6 @@ paths:
     parameters:
       - $ref: '#/components/parameters/conversation_id'
     get:
-      x-swagger-router-controller: members
       operationId: getMembers
       tags:
         - member
@@ -273,7 +263,6 @@ paths:
                     - user_name
                     - state
     post:
-      x-swagger-router-controller: members
       operationId: createMember
       tags:
         - member
@@ -324,7 +313,6 @@ paths:
       - $ref: '#/components/parameters/conversation_id'
       - $ref: '#/components/parameters/member_id'
     get:
-      x-swagger-router-controller: members
       operationId: getMember
       tags:
         - member
@@ -341,7 +329,6 @@ paths:
                   href:
                     $ref: '#/components/schemas/href_member'
     put:
-      x-swagger-router-controller: members
       operationId: updateMember
       tags:
         - member
@@ -367,7 +354,6 @@ paths:
                 channel:
                   $ref: '#/components/schemas/channel'
     delete:
-      x-swagger-router-controller: members
       operationId: deleteMember
       tags:
         - member
@@ -377,7 +363,6 @@ paths:
           $ref: '#/components/responses/SuccessEmptyJSON'
   /users:
     get:
-      x-swagger-router-controller: users
       operationId: getUsers
       tags:
         - user
@@ -399,7 +384,6 @@ paths:
                     href:
                       $ref: '#/components/schemas/href_user'
     post:
-      x-swagger-router-controller: users
       operationId: createUser
       tags:
         - user
@@ -435,7 +419,6 @@ paths:
     parameters:
       - $ref: '#/components/parameters/user_id'
     get:
-      x-swagger-router-controller: users
       operationId: getUser
       tags:
         - user
@@ -452,7 +435,6 @@ paths:
                   name:
                     $ref: '#/components/schemas/name_user'
     put:
-      x-swagger-router-controller: users
       operationId: updateUser
       tags:
         - user
@@ -482,7 +464,6 @@ paths:
                 channels:
                   $ref: '#/components/schemas/channel'
     delete:
-      x-swagger-router-controller: users
       operationId: deleteUser
       tags:
         - user
@@ -494,7 +475,6 @@ paths:
     parameters:
       - $ref: '#/components/parameters/user_id'
     get:
-      x-swagger-router-controller: users
       operationId: getuserConversations
       tags:
         - user
@@ -532,7 +512,6 @@ paths:
                       $ref: '#/components/schemas/conversation_id'
   /legs:
     get:
-      x-swagger-router-controller: listLegs
       operationId: listLegs
       tags:
         - leg
@@ -636,7 +615,6 @@ paths:
     parameters:
       - $ref: '#/components/parameters/leg_id'
     delete:
-      x-swagger-router-controller: deleteLeg
       operationId: deleteLeg
       tags:
         - leg
@@ -964,7 +942,6 @@ components:
       in: path
       required: true
       description: Leg ID
-      x-example: 6e99034ce755c5ad7fde645a46d140a4
       schema:
         type: string
     user_id:
@@ -972,7 +949,6 @@ components:
       in: path
       required: true
       description: User ID
-      x-example: USR-00092382-3017-4abb-8306-4bee9e772f7f
       schema:
         type: string
     conversation_id:
@@ -981,7 +957,6 @@ components:
       required: true
       description: Conversation ID
       example: CON-f972836a-550f-45fa-956c-12a2ab5b7d22
-      x-example: CON-f972836a-550f-45fa-956c-12a2ab5b7d22
       schema:
         type: string
     member_id:
@@ -989,7 +964,6 @@ components:
       in: path
       required: true
       description: Member ID
-      x-example: MEM-f972836a-550f-45fa-956c-12a2ab5b7d22
       schema:
         type: string
     event_id:
@@ -997,7 +971,6 @@ components:
       in: path
       description: Event ID
       required: true
-      x-example: '5'
       schema:
         type: string
     date_start:
