--- a/definitions/number-insight.yml
+++ b/definitions/number-insight.yml
@@ -8,17 +8,13 @@ info:
   description: >-
     Nexmo's Number Insight API delivers real-time intelligence about the validity, reachability and roaming status of a phone number and tells you how to format the number correctly in your application. There are three levels of Number Insight API available: [Basic, Standard and Advanced](/number-insight/overview#basic-standard-and-advanced-apis). The advanced API is available asynchronously as well as synchronously.
   contact:
-    name: Nexmo.com
+    name: Nexmo DevRel
     email: devrel@nexmo.com
-    url: https://developer.nexmo.com/
-    x-twitter: Nexmo
+    url: 'https://developer.nexmo.com/'
   termsOfService: 'https://www.nexmo.com/terms-of-use'
   license:
     name: 'The MIT License (MIT)'
     url: 'https://opensource.org/licenses/MIT'
-  x-logo:
-    url: 'https://twitter.com/Nexmo/profile_image?size=original'
-  x-apiClientRegistration: 'https://dashboard.nexmo.com/sign-up'
 externalDocs:
   url: https://developer.nexmo.com/api/number-insight
   x-sha1: 081f6d985e2e4a75586da1654fde880a96885405
