--- a/definitions/redact.yml
+++ b/definitions/redact.yml
@@ -5,9 +5,9 @@ info:
   title: "Redact API"
   description: Nexmo provides [Redact API](https://developer.nexmo.com/redact/overview) to help organisations meet their privacy compliance obligations. Redact API allows you to redact private information on demand, allowing you to meet your own compliance needs.
   contact:
-    name: Nexmo
-    url: 'https://developer.nexmo.com/'
+    name: Nexmo DevRel
     email: devrel@nexmo.com
+    url: 'https://developer.nexmo.com/'
 servers:
   - url: https://api.nexmo.com
 paths:
