--- a/definitions/voice.yml
+++ b/definitions/voice.yml
@@ -6,7 +6,7 @@ info:
   description: The Voice API lets you create outboud calls, control in progress calls
     and get information about historical calls.
   contact:
-    name: Nexmo.com
+    name: Nexmo DevRel
     email: devrel@nexmo.com
     url: 'https://developer.nexmo.com/'
 servers:
