Read callback deprecated for Viber (#70)
* Read callback was deprecated on 19th Dec 2018 by Viber.

* Added whatsapp has read status

--- a/definitions/messages-olympus.yml
+++ b/definitions/messages-olympus.yml
@@ -155,7 +155,7 @@ components:
         status:
           type: string
           example: delivered
-          description: The status of the message. The `read` message status is only available for `viber_service_msg` and `messenger`.
+          description: The status of the message. The `read` message status is only available for `messenger` and `whatsapp`.
           enum:
             - submitted
             - delivered
