Add accountBalance XML root node

--- a/definitions/account.yml
+++ b/definitions/account.yml
@@ -441,6 +441,8 @@ components:
   schemas:
     accountBalance:
       type: object
+      xml:
+        name: accountBalance
       properties:
         value:
           type: number
