--- a/definitions/vbc-extension.yml
+++ b/definitions/vbc-extension.yml
@@ -5,21 +5,22 @@ info:
   title: "Extension API"
   description: "The Extension API is a read-only API that enables you to retrieve details of the extensions associated with an account."
   version: "1.0"
-  termsOfService: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos/"
+  termsOfService: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
   contact:
     name: "Extension API"
     url: "https://businesssupport.vonage.com/contactus"
   license:
     name: "Vonage"
-    url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos/"
+    url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
 
 servers:
-- url: "https://api.vonage.com/"
+- url: "https://api.vonage.com"
   
 paths:
   /accounts/{account_id}/extensions:
     get:
       summary: Retrieve the extensions for the specified account
+      operationId: getAllExtensions
       parameters:
         - in: path
           name: account_id
@@ -65,19 +66,20 @@ paths:
   /accounts/{account_id}/extensions/{extension_number}:
     get:
       summary: Retrieve details about the specified extension
+      operationId: getExtension
       parameters:
-        - in: path
-          name: account_id
-          schema:
-            type: string
-          required: true
-          description: The ID of the account you want to list the extensions for
-        - in: path
-          name: extension_number
-          schema:
-            type: integer
-          required: true
-          description: The number of the extension you want to retrieve details about
+      - in: path
+        name: account_id
+        schema:
+          type: string
+        required: true
+        description: The ID of the account you want to list the extensions for
+      - in: path
+        name: extension_number
+        schema:
+          type: integer
+        required: true
+        description: The number of the extension you want to retrieve details about
 
       responses:
         200:
