--- a/definitions/sms.yml
+++ b/definitions/sms.yml
@@ -38,7 +38,7 @@ paths:
             maxLength: 8
         - name: api_secret
           description: Your API secret. Required unless `sig` is provided
-          required: false
+          required: true
           in: query
           example: abcdef0123456789
           schema:
