Revert "Mark api_secret as required in sms.yml (#76)"
This reverts commit d38a58f93ecc882d21a1a735568a741a95cc41cf.

api_secret is not required, as signature authentication can be used
instead

--- a/definitions/sms.yml
+++ b/definitions/sms.yml
@@ -38,7 +38,7 @@ paths:
             maxLength: 8
         - name: api_secret
           description: Your API secret. Required unless `sig` is provided
-          required: true
+          required: false
           in: query
           example: abcdef0123456789
           schema:
