--- a/definitions/vonage-business-cloud/account.yml
+++ b/definitions/vonage-business-cloud/account.yml
@@ -1,170 +1,217 @@
-
-openapi: "3.0.0"
-
+---
+openapi: 3.0.0
 info:
-  title: "Account API"
-  description: "The Account API is a read-only API that enables you to retrieve details about an account."
-  version: "1.0"
-  termsOfService: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
-  contact:
-    name: "Account API"
-    url: "https://businesssupport.vonage.com/contactus"
-  license:
-    name: "Vonage"
-    url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
-
+  version: 1.10.1
+  title: Account API
+  description: Retrieve information about accounts.
+  termsOfService: ""
 servers:
-- url: "https://api.vonage.com"
-  
+- url: "https://api.vonage.com"  
 paths:
-  /accounts/{account_id}:
-    get:
-      summary: Retrieve details about the specified account.
-      operationId: getAccount
-      parameters:
-        - in: path
-          name: account_id
-          schema:
-            type: string
-          required: true
-          description: The ID of the account you want to retrieve details for. Use `self` to retrieve details about the current account.
 
+  "/api/accounts/{account_id}":
+    get:
+      operationId: AccountCtrl.getAccountServicesByAccountID
+      parameters:
+        - $ref: "#/components/parameters/AccountID"
       responses:
-        '200':
-          description: Successful response
+        "200":
+          description: Success
           content:
-            application/json:
+            "application/json":
               schema:
-                $ref: '#/components/responses/Account'    
+                $ref: "#/components/responses/AccountHalResponse"
+        "404":
+          description: Account not found
+      security:
+        - LoginName:
+            []
+      summary: Get account data by ID
 
-  /accounts/{account_id}/locations:
+  "/api/accounts/{account_id}/locations":
     get:
-      summary: Retrieve a list of locations associated with a specified account.
-      operationId: getAllLocations
+      operationId: AccountCtrl.getLocationsByAccountID
       parameters:
-        - in: path
-          name: account_id
-          schema:
-            type: string
-          required: true
-          description: The ID of the account you want to retrieve locations for. Use `self` to retrieve locations for the current account.
-
+        - $ref: "#/components/parameters/AccountID"
       responses:
-        '200':
-          description: Successful response
+        "200":
+          description: Success
           content:
-            application/json:
+            "application/json":
               schema:
-                type: array
-                items: 
-                  $ref: '#/components/responses/Location'
+                $ref: "#/components/responses/LocationsHalResponse"
+      security:
+        - LoginName:
+            []
+      summary: Get account locations data by account ID
 
-  /accounts/{account_id}/locations/{location_id}:
+  "/api/accounts/{account_id}/locations/{location_id}":
     get:
-      summary: Retrieve details of a specific location associated with an account.
-      operationId: getLocation
+      operationId: AccountCtrl.getLocationByID
       parameters:
-        - in: path
-          name: account_id
-          schema:
-            type: string
-          required: true
-          description: The ID of the account that the location is associated with. Use `self` to retrieve locations for the current account.
+        - $ref: "#/components/parameters/AccountID"
         - in: path
           name: location_id
-          schema:
-            type: string
           required: true
-          description: The location ID you want to retrieve locations for. Use `self` to retrieve locations for the current account.          
-
+          schema:
+            type: number
       responses:
-        '200':
-          description: Successful response
+        "200":
+          description: Success
           content:
-            application/json:
+            "application/json":
               schema:
-                $ref: '#/components/responses/Location'                                            
+                $ref: "#/components/responses/LocationHalResponse"
+        "404":
+          description: Location not found
+      security:
+        - LoginName:
+            []
+      summary: Get location data by account ID and location ID
 
 components:
+
+  securitySchemes:
+    LoginName:
+      type: apiKey
+      name: x-von-user
+      in: header
+
+  parameters:
+    AccountID:
+      in: path
+      name: account_id
+      required: true
+      schema:
+        type: string 
+
   responses:
-    Account:
+    AccountHalResponse:
+      properties:
+        page_size:
+          type: number
+        cursor:
+          type: number
+        _links:
+          $ref: "#/components/schemas/Links"
+        _embedded:
+          $ref: "#/components/schemas/AccountEmbeddedObject"
       type: object
-      properties: 
+    LocationHalResponse:
+      properties:
+        page_size:
+          type: number
+        cursor:
+          type: number
+        _links:
+          $ref: "#/components/schemas/Links"
+        _embedded:
+          $ref: "#/components/schemas/LocationEmbeddedObject"
+      type: object
+    LocationsHalResponse:
+      properties:
+        page_size:
+          type: number
+        cursor:
+          type: number
+        _links:
+          $ref: "#/components/schemas/Links"
+        _embedded:
+          $ref: "#/components/schemas/LocationsEmbeddedObject"
+      type: object
+
+  schemas:
+    Href:
+      properties:
+        href:
+          type: string
+      type: object
+    Links:
+      properties:
+        first:
+          $ref: "#/components/schemas/Href"
+        prev:
+          $ref: "#/components/schemas/Href"
+        self:
+          $ref: "#/components/schemas/Href"
+        next:
+          $ref: "#/components/schemas/Href"
+      type: object
+
+    Address:
+      properties:
+        address_1:
+          type: string
+        address_2:
+          type: string
+        country:
+          type: string
+        state:
+          type: string
+        city:
+          type: string
+        postal_code:
+          type: string
+      type: object
+
+    Account:
+      properties:
         id:
-          type: integer
-          example: 1123
-          description: The account ID.
+          type: number
         name:
           type: string
-          example: "Test Account"
-          description: The name of the account holder.
+        status:
+          type: string
         address:
-          type: object
-          properties: 
-            address_1:
-              type: string
-              example: "23 Main Street"
-              description: The first line of the account holder's address.
-            address_2:
-              type: string
-              example: ""
-              description: The second line of the account holder's address.     
-            city:
-              type: string
-              example: "Holmdel"
-              description: The account holder's city. 
-            state:
-              type: string
-              example: "NJ"
-              description: The account holder's state.       
-            postal_code:
-              type: string
-              example: "07733"
-              description: The account holder's postal code.      
-            country:
-              type: string
-              example: "US"
-              description: The account holder's country.
+          $ref: "#/components/schemas/Address"
+      type: object
+
+    AccountEmbeddedObject:
+      properties:
+        data:
+          $ref: "#/components/schemas/Account"
+      type: object
+
+    AddressWithTimeZone:
+      properties:
+        address_1:
+          type: string
+        address_2:
+          type: string
+        country:
+          type: string
+        state:
+          type: string
+        city:
+          type: string
+        postal_code:
+          type: string
+        time_zone:
+          type: string
+      type: object
 
     Location:
-      type: object
-      properties: 
+      properties:
         id:
-          type: integer
-          example: 1123
-          description: The location ID.
+          type: number
         name:
           type: string
-          example: "Location 1"
-          description: The name of the location.
         address:
-          type: object
-          properties: 
-            address_1:
-              type: string
-              example: "23 Main Street"
-              description: The first line of the location address.
-            address_2:
-              type: string
-              example: ""
-              description: The second line of the location address.     
-            city:
-              type: string
-              example: "Holmdel"
-              description: The location city.  
-            state:
-              type: string
-              example: "NJ"
-              description: The location state.       
-            postal_code:
-              type: string
-              example: "07733"
-              description: The postal code of the location. 
-            time_zone:
-              type: string
-              example: "America/New_York"
-              description: The location's time zone.                   
-            country:
-              type: string
-              example: "US"
-              description: The account holder's country.                                                    
+          $ref: "#/components/schemas/AddressWithTimeZone"
+      type: object
+    
+    LocationsEmbeddedObject:
+      properties:
+        data:
+          items:
+            $ref: "#/components/schemas/Location"
+          type: array
+      type: object
+
+    LocationEmbeddedObject:
+      properties:
+        data:
+          $ref: "#/components/schemas/Location"
+      type: object
+
+  
