--- a/definitions/vonage-business-cloud/extension.yml
+++ b/definitions/vonage-business-cloud/extension.yml
@@ -1,166 +1,222 @@
-
-openapi: "3.0.0"
-
+---
+openapi: 3.0.0
 info:
-  title: "Extension API"
-  description: "The Extension API is a read-only API that enables you to retrieve details of the extensions associated with an account."
-  version: "1.0"
-  termsOfService: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
-  contact:
-    name: "Extension API"
-    url: "https://businesssupport.vonage.com/contactus"
-  license:
-    name: "Vonage"
-    url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
-
+  version: 1.10.1
+  title: Extension API
+  description: Retrieve information about extensions.
+  termsOfService: ""
 servers:
-- url: "https://api.vonage.com"
-  
+- url: "https://api.vonage.com"  
 paths:
-  /accounts/{account_id}/extensions:
+
+  "/api/accounts/{account_id}/extensions":
     get:
-      summary: Retrieve the extensions for the specified account
-      operationId: getAllExtensions
+      operationId: ExtensionCtrl.getAccountExtensions
       parameters:
-        - $ref: '/components/parameters/AccountIdParam'
+        - $ref: '#/components/parameters/AccountID'
         - in: query
-          name: login_name
+          name: page_size
+          required: false
+          schema:
+            type: number
+        - in: query
+          name: cursor
+          required: false
+          schema:
+            type: number
+        - description: ASC or DESC
+          in: query
+          name: order
+          required: false
           schema:
             type: string
-          required: false
-          description: The login name to list extensions for
-        - in: query
-          name: email
-          schema:
-            type: string
-          required: false
-          description: The account email address
-        - in: query
+        - description: filter by location id
+          in: query
           name: location_id
-          schema:
-            type: integer
           required: false
-          description: The location id of the account    
-        - in: query
+          schema:
+            type: number
+        - description: filter by phone number
+          in: query
           name: phone_number
+          required: false
           schema:
             type: string
+        - description: filter by login name
+          in: query
+          name: login_name
           required: false
-          description: The DID phone number
-
+          schema:
+            type: string
+        - description: filter by email address
+          in: query
+          name: email
+          required: false
+          schema:
+            type: string
       responses:
-        '200':
-          description: Successful response
+        "200":
+          description: Success
           content:
-            application/json:
+            "application/json":
               schema:
-                type: array
-                items:
-                  $ref: '#/components/responses/Extension'
-                  
-  /accounts/{account_id}/extensions/{extension_number}:
+                $ref: "#/components/responses/EndUserRouteHalResponse"
+        "404":
+          description: Extension not found
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/responses/ErrorResponse"
+      security:
+        - LoginName:
+            []
+      summary: Get account extensions data by account ID
+
+  "/api/accounts/{account_id}/extensions/{extension_number}":
     get:
-      summary: Retrieve details about the specified extension
-      operationId: getExtension
+      operationId: ExtensionCtrl.getAccountExtensionByID
+      tags:
+        - Extensions
       parameters:
-      - $ref: '/components/parameters/AccountIdParam'
-      - in: path
-        name: extension_number
-        schema:
-          type: integer
-        required: true
-        description: The number of the extension you want to retrieve details about
-
+        - $ref: '#/components/parameters/AccountID'
+        - in: path
+          name: extension_number
+          required: true
+          schema:
+            type: string
       responses:
-        '200':
-          description: Successful response
+        "200":
+          description: Success
           content:
-            application/json:
+            "application/json":
               schema:
-                $ref: '#/components/responses/Extension'                  
+                $ref: "#/components/responses/EndUserRouteHalResponse"
+        "404":
+          description: Extension not found
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/responses/ErrorResponse"
+      security:
+        - LoginName:
+            []
+      summary: Get extension data by account ID and extension number
 
 components:
+  securitySchemes:
+    LoginName:
+      type: apiKey
+      name: x-von-user
+      in: header
+
   parameters:
-    AccountIdParam:
+    AccountID:
       in: path
       name: account_id
+      required: true
       schema:
         type: string
-      required: true
-      description: The ID of the account you want to list the extensions for
-
+  
   responses:
-    Extension:
+    EndUserRouteHalResponse:
+      properties:
+        page_size:
+          type: number
+        cursor:
+          type: number
+        _links:
+          $ref: "#/components/schemas/Links"
+        _embedded:
+          $ref: "#/components/schemas/EndUserRouteEmbeddedObject"
       type: object
-      properties: 
+
+    ErrorResponse:
+      properties:
+        msg:
+          description: Error message
+          type: string
+        status:
+          description: Http Response Code
+          type: number
+      type: object
+  
+  
+  schemas:
+    Href:
+      properties:
+        href:
+          type: string
+      type: object
+
+    Links:
+      properties:
+        first:
+          $ref: "#/components/schemas/Href"
+        prev:
+          $ref: "#/components/schemas/Href"
+        self:
+          $ref: "#/components/schemas/Href"
+        next:
+          $ref: "#/components/schemas/Href"
+      type: object
+
+    BasicUser:
+      properties:
+        email:
+          type: string
+        login_name:
+          type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+      type: object
+
+    DID:
+      properties:
+        phone_number:
+          type: string
+        custom_tag:
+          type: string
+      type: object
+
+    Line:
+      properties:
+        handset_name:
+          type: string
+        sip_id:
+          type: string
+      type: object
+
+    EndUserRoute:
+      properties:
         extension_number:
-          type: integer
-          example: 900
+          type: string
         user:
-          type: object
-          properties: 
-            email:
-              type: string
-              description: User email address
-            login_name:
-              type: string
-              description: User login            
-            first_name:
-              type: string
-              description: User first name           
-            last_name:
-              type: string
-              description: User last name
+          $ref: "#/components/schemas/BasicUser"
         location_id:
-          type: integer
-          description: Location ID 
-          example: 267256
+          type: number
         vtt_enabled:
           type: boolean
-          description: VTT enabled? 
-          example: true    
-        blf_enabled:
-          type: boolean
-          description: BLF enabled? 
-          example: true 
-        sla_enabled:
-          type: boolean
-          description: SLA enabled? 
-          example: true 
         dnd_enabled:
           type: boolean
-          description: DND enabled? 
-          example: false   
         caller_id:
           type: string
-          description: Caller ID
-          example: "17328675309"
-        allow_monitoring:
-          type: boolean
-          description: Allow monitoring?
-          example: true
-        ala_monitoring:
-          type: boolean
-          description: ALA monitoring?
-          example: false      
         block_caller_id:
           type: boolean
-          description: Block caller ID?
-          example: false
         dids:
-          type: object
-          properties:
-            phone_number:
-              type: string
-              example: "17328675309"
-            custom_tag:
-              type: string
-        handsets:
-          type: object
-          properties:
-            name:
-              type: string
-              example: "Vonage Desktop Softphone"
-            sip_id:
-              type: string    
-              example: "VH4258231"
+          items:
+            $ref: "#/components/schemas/DID"
+          type: array
+        extension_handsets:
+          items:
+            $ref: "#/components/schemas/Line"
+          type: array
+      type: object
+
+    EndUserRouteEmbeddedObject:
+      properties:
+        data:
+          $ref: "#/components/schemas/EndUserRoute"
+      type: object
+
