--- a/definitions/vonage-business-cloud/user.yml
+++ b/definitions/vonage-business-cloud/user.yml
@@ -1,156 +1,203 @@
-
-openapi: "3.0.0"
-
+---
+openapi: 3.0.0
 info:
-  title: "User API"
-  description: "The User API is a read-only API that enables you to retrieve details about users associated with an account."
-  version: "1.0"
-  termsOfService: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
-  contact:
-    name: "User API"
-    url: "https://businesssupport.vonage.com/contactus"
-  license:
-    name: "Vonage"
-    url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
-
+  version: 1.10.1
+  title: User API
+  description: Retrieve information about users
+  termsOfService: ""
 servers:
-- url: "https://api.vonage.com"
-  
+- url: "https://api.vonage.com"  
 paths:
-  /accounts/{account_id}/users:
+
+  "/api/accounts/{account_id}/users":
     get:
-      summary: Retrieve a list of users for the specified account.
-      operationId: getAllUsers
+      operationId: UserCtrl.getUsers
       parameters:
-        - in: path
-          name: account_id
+        - $ref: '#/components/parameters/AccountID'
+        - in: query
+          name: page_size
+          required: false
+          schema:
+            type: number
+        - in: query
+          name: cursor
+          required: false
+          schema:
+            type: number
+        - description: ASC or DESC
+          in: query
+          name: order
+          required: false
           schema:
             type: string
-          required: true
-          description: The ID of the account you want to retrieve user details for. Use `self` to retrieve users belonging to the current account.
-        - in: query
+        - description: filter by first name
+          in: query
           name: first_name
+          required: false
           schema:
             type: string
-          required: false
-          description: The first name of the user(s) you want to retrieve.          
-        - in: query
+        - description: filter by last name
+          in: query
           name: last_name
+          required: false
           schema:
             type: string
-          required: false
-          description: The last name of the user(s) you want to retrieve.          
-        - in: query
+        - description: filter by login name
+          in: query
           name: login_name
+          required: false
           schema:
             type: string
-          required: false
-          description: The login name of the user you want to retrieve.          
-        - in: query
-          name: user_type
-          schema:
-            type: string
-          required: false
-          description: The type of users you want to retrieve details for.          
-        - in: query
+        - description: filter by email address
+          in: query
           name: email
+          required: false
           schema:
             type: string
-          required: false
-          description: The email address of the user you want to retrieve.          
-
       responses:
-        '200':
-          description: Successful response
+        "200":
+          description: Success
           content:
-            application/json:
+            "application/json":
               schema:
-                type: array
-                items:
-                  $ref: '#/components/responses/User'   
+                $ref: "#/components/responses/UsersHalResponse"
+      security:
+        - LoginName:
+            []
+      summary: Get account users data by account ID
 
-  /accounts/{account_id}/users/{user_id}:
+  "/api/accounts/{account_id}/users/{user_id}":
     get:
-      summary: Retrieve details of the specified user.
-      operationId: getUser
+      operationId: UserCtrl.getUserByID
       parameters:
-        - in: path
-          name: account_id
-          schema:
-            type: integer
-          required: true
-          description: The ID of the account you want to retrieve user details for. Use `self` for both `account_id` and `user_id` to retrieve details about the current user.
+        - $ref: '#/components/parameters/AccountID'
         - in: path
           name: user_id
-          schema:
-            type: integer
           required: true
-          description: Use `self` for both `user_id` and `account_id` to retrieve details about the current user.
-
+          schema:
+            type: number
       responses:
-        '200':
-          description: Successful response
+        "200":
+          description: Success
           content:
-            application/json:
+            "application/json":
               schema:
-                $ref: '#/components/responses/User'   
-
-
+                $ref: "#/components/responses/UserHalResponse"
+        "404":
+          description: User not found
+      security:
+        - LoginName:
+            []
+      summary: Get user data by account ID and user ID
 components:
+  securitySchemes:
+    LoginName:
+      type: apiKey
+      name: x-von-user
+      in: header
+
+  parameters:
+    AccountID:
+      in: path
+      name: account_id
+      required: true
+      schema:
+        type: string
+
   responses:
-    User:
+    UserHalResponse:
+      properties:
+        page_size:
+          type: number
+        cursor:
+          type: number
+        _links:
+          $ref: "#/components/schemas/Links"
+        _embedded:
+          $ref: "#/components/schemas/UserEmbeddedObject"
       type: object
-      properties: 
-        id:
-          type: integer
-          example: 1123
-          description: The user ID.
+
+    UsersHalResponse:
+      properties:
+        page_size:
+          type: number
+        cursor:
+          type: number
+        _links:
+          $ref: "#/components/schemas/Links"
+        _embedded:
+          $ref: "#/components/schemas/UsersEmbeddedObject"
+      type: object
+
+  schemas:
+    Href:
+      properties:
+        href:
+          type: string
+      type: object
+
+    Links:
+      properties:
+        first:
+          $ref: "#/components/schemas/Href"
+        prev:
+          $ref: "#/components/schemas/Href"
+        self:
+          $ref: "#/components/schemas/Href"
+        next:
+          $ref: "#/components/schemas/Href"
+      type: object
+
+    Contact:
+      properties:
+        type:
+          type: string
+        value:
+          type: string
+      type: object
+
+    UserExtension:
+      properties:
+        dids:
+          items:
+            type: string
+          type: array
+        extension_number:
+          type: string
+      type: object
+
+    User:
+      properties:
         email:
           type: string
-          example: "bob@example.com"
-          description: The user's email address.
-        first_name:
-          type: string
-          example: "Bob"
-          description: The user's name.   
-        last_name:
-          type: string
-          example: "Smith"
-          description: The user's last name.    
         login_name:
           type: string
-          example: "bsmith"
-          description: The user's login name.    
-        user_type:
+        first_name:
           type: string
-          example: "END_USER"
-          description: The type of user.                                     
+        last_name:
+          type: string
+        id:
+          type: number
         contact_numbers:
-          type: array
           items:
-            type: object
-            properties:
-              type:
-                type: string
-                example: "Mobile"
-                description: "The type of number, for example: Mobile, Home or Fax."
-              value:
-                type: string
-                example: "732-867-5309"
-                description: The telephone number.
+            $ref: "#/components/schemas/Contact"
+          type: array
         extensions:
-          type: array
           items:
-            type: object
-            properties:
-              dids:
-                type: array
-                items:
-                  type: string
-                  example: "17328675309"
-                description: An array containing the Direct Inward Dial (DID) number(s) for the user's extension.
-              extension_number:
-                type: string
-                example: "1000"
-                description: The user's extension number.
+            $ref: "#/components/schemas/UserExtension"
+          type: array
+      type: object
 
+    UsersEmbeddedObject:
+      properties:
+        data:
+          items:
+            $ref: "#/components/schemas/User"
+          type: array
+      type: object
+
+    UserEmbeddedObject:
+      properties:
+        data:
+          $ref: "#/components/schemas/User"
+      type: object
