--- a/definitions/vonage-business-cloud/account.yml
+++ b/definitions/vonage-business-cloud/account.yml
@@ -4,7 +4,7 @@ info:
   version: 1.10.1
   title: Account API
   description: Retrieve information about accounts.
-  termsOfService: ""
+  termsOfService: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
 servers:
 - url: "https://api.vonage.com"  
 paths:
