--- a/definitions/vonage-business-cloud/extension.yml
+++ b/definitions/vonage-business-cloud/extension.yml
@@ -4,7 +4,13 @@ info:
   version: 1.10.1
   title: Extension API
   description: Retrieve information about extensions.
-  termsOfService: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
+  contact:
+    name: "Extension API"
+    url: "https://businesssupport.vonage.com/contactus"
+  license:
+    name: "Vonage"
+    url: "https://www.vonage.com/business/legal-policy-center/business-cloud/tos"
+
 servers:
 - url: "https://api.vonage.com"  
 paths:
@@ -19,54 +25,56 @@ paths:
           required: false
           schema:
             type: number
+          description: Page size for pagination
         - in: query
           name: cursor
           required: false
           schema:
             type: number
-        - description: ASC or DESC
-          in: query
+          description: Cursor for pagination
+        - in: query
           name: order
           required: false
           schema:
             type: string
-        - description: filter by location id
-          in: query
+          description: Sort results in ascending (ASC) or descending (DESC) order
+        - in: query
           name: location_id
           required: false
           schema:
             type: number
-        - description: filter by phone number
-          in: query
+          description: filter by location id
+        - in: query
           name: phone_number
           required: false
           schema:
             type: string
-        - description: filter by login name
-          in: query
+          description: filter by phone number
+        - in: query
           name: login_name
           required: false
           schema:
             type: string
-        - description: filter by email address
-          in: query
+          description: filter by login name
+        - in: query
           name: email
           required: false
           schema:
             type: string
+          description: filter by email address
       responses:
         "200":
           description: Success
           content:
             "application/json":
               schema:
-                $ref: "#/components/responses/EndUserRouteHalResponse"
+                $ref: "#/components/schemas/EndUserRouteHalResponse"
         "404":
           description: Extension not found
           content:
             "application/json":
               schema:
-                $ref: "#/components/responses/ErrorResponse"
+                $ref: "#/components/schemas/ErrorResponse"
       security:
         - LoginName:
             []
@@ -84,19 +92,20 @@ paths:
           required: true
           schema:
             type: string
+          description: The extension number
       responses:
         "200":
           description: Success
           content:
             "application/json":
               schema:
-                $ref: "#/components/responses/EndUserRouteHalResponse"
+                $ref: "#/components/schemas/EndUserRouteHalResponse"
         "404":
           description: Extension not found
           content:
             "application/json":
               schema:
-                $ref: "#/components/responses/ErrorResponse"
+                $ref: "#/components/schemas/ErrorResponse"
       security:
         - LoginName:
             []
@@ -116,30 +125,7 @@ components:
       required: true
       schema:
         type: string
-  
-  responses:
-    EndUserRouteHalResponse:
-      properties:
-        page_size:
-          type: number
-        cursor:
-          type: number
-        _links:
-          $ref: "#/components/schemas/Links"
-        _embedded:
-          $ref: "#/components/schemas/EndUserRouteEmbeddedObject"
-      type: object
-
-    ErrorResponse:
-      properties:
-        msg:
-          description: Error message
-          type: string
-        status:
-          description: Http Response Code
-          type: number
-      type: object
-  
+      description: The account ID
   
   schemas:
     Href:
@@ -219,4 +205,27 @@ components:
         data:
           $ref: "#/components/schemas/EndUserRoute"
       type: object
+
+    EndUserRouteHalResponse:
+      properties:
+        page_size:
+          type: number
+        cursor:
+          type: number
+        _links:
+          $ref: "#/components/schemas/Links"
+        _embedded:
+          $ref: "#/components/schemas/EndUserRouteEmbeddedObject"
+      type: object
+
+    ErrorResponse:
+      properties:
+        msg:
+          description: Error message
+          type: string
+        status:
+          description: Http Response Code
+          type: number
+      type: object
+
 
