--- a/definitions/sms.yml
+++ b/definitions/sms.yml
@@ -203,7 +203,7 @@ components:
       type: object
       properties:
         message-count:
-          type: integer
+          type: string
           description: The amount of messages in the request
           example: 1
         messages:
@@ -225,7 +225,7 @@ components:
       type: object
       properties:
         message-count:
-          type: integer
+          type: string
           description: The amount of messages in the request
           example: 1
         messages:
